--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -353,7 +353,7 @@
 
 
 
- /.<div class="reviews-section">
+<div class="reviews-section">
   <h2><b>What Clients Say</b></h2>
   <p style="color: rgb(171, 161, 161);">
       Explore the world's best & largest Bidding marketplace with our beautiful Bidding products.
