--- a/oas-env/oas/static/CSS/register.css
+++ b/oas-env/oas/static/CSS/register.css
@@ -58,7 +58,7 @@ section {
 .card .p-5{
     width: 100%; 
     max-width: 500px; 
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color:  rgba(0, 0, 0, 0.9);
     border-radius: 15px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 
@@ -68,6 +68,7 @@ section {
     border-radius: 10px;
     border: 1px solid #ddd;
     padding: 10px;
+    background-color: #8f9aac;
 }
 
 /* Button styling */
