--- a/oas-env/oas/static/CSS/register.css
+++ b/oas-env/oas/static/CSS/register.css
@@ -58,7 +58,7 @@ section {
 .card .p-5{
     width: 100%; 
     max-width: 500px; 
-    background-color:  rgb(0 0 0 / 90%);
+    background-color:  rgb(0 0 0 / 90%) !important;
     border-radius: 15px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 
