--- a/oas-env/oas/templates/register.html
+++ b/oas-env/oas/templates/register.html
@@ -14,7 +14,7 @@
 
 
 <section class="d-flex justify-content-center align-items-center" style="height: 100vh; background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%); color: #fff;">
-  <div class="card p-5" style="width: 100%; max-width: 500px; background-color: rgba(255, 255, 255, 0.9); border-radius: 15px; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);">
+  <div class="card p-5" style="width: 100%; max-width: 500px; background-color: rgb(0 0 0 / 90%); border-radius: 15px; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);">
     <form method="post" action="{% url 'register-user' %}">
       {% csrf_token %}
       <h2 class="text-center mb-4" style="color: #ffffff;">Create an Account</h2>
