--- a/oas-env/oas/templates/register.html
+++ b/oas-env/oas/templates/register.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="text-center">
-        <span>Already have an account?</span>
+        <span style="color: #ffffff;">Already have an account?</span>
         <a href="{% url 'login' %}" class="text-primary" style="color: #2575fc;">Login</a>
       </div>
     </form>
