--- a/oas-env/oas/templates/login.html
+++ b/oas-env/oas/templates/login.html
@@ -11,18 +11,18 @@
 
 
 <section class="d-flex justify-content-center align-items-center" style="height: 100vh; background: linear-gradient(to right, #182848, #4b6cb7); color: #fff;">
-   <div class="card p-5" style="width: 100%; max-width: 500px; background-color: rgba(255, 255, 255, 0.9); border-radius: 15px; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);">
+   <div class="card p-5" style="width: 100%; max-width: 500px; background-color: rgb(0 0 0 / 90%); border-radius: 15px; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);">
      <form method="post" action="{% url 'login' %}">
        {% csrf_token %}
-       <h2 class="text-center mb-4" style="color: #333;">Login</h2>
+       <h2 class="text-center mb-4" style="color: #ffffff;">Login</h2>
        
        <div class="mb-3">
-         <label for="username" class="form-label">Username</label>
+         <label for="username" class="form-label" style="color: #ffffff;">Username</label>
          <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" style="border-radius: 10px; border: 1px solid #ddd;">
        </div>
        
        <div class="mb-3">
-         <label for="password" class="form-label">Password</label>
+         <label for="password" class="form-label" style="color: #ffffff;">Password</label>
          <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" style="border-radius: 10px; border: 1px solid #ddd;">
        </div>
        
@@ -31,7 +31,7 @@
        </div>
  
        <div class="text-center">
-         <span>Don't have an account?</span>
+         <span style="color: #ffffff;">Don't have an account?</span>
          <a href="{% url 'register-user'%}" class="text-primary" style="color: #2575fc;">Sign-up</a>
        </div>
      </form>
