--- a/oas-env/oas/templates/login.html
+++ b/oas-env/oas/templates/login.html
@@ -12,7 +12,7 @@
 
 <section class="d-flex justify-content-center align-items-center" style="height: 100vh; background: linear-gradient(to right, #182848, #4b6cb7); color: #fff;">
   <div class="card p-5" style="width: 100%; max-width: 500px; background-color: rgb(0 0 0 / 90%); border-radius: 15px; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);">
-    <form method="post" action="{% url 'loginUser' %}">
+    <form method="post" action="{% url 'login' %}">
       {% csrf_token %}
       <h2 class="text-center mb-4" style="color: #ffffff;">Login</h2>
 
