--- a/oas-env/oas/static/CSS/about.css
+++ b/oas-env/oas/static/CSS/about.css
@@ -506,7 +506,7 @@ a.card-link:hover span.cta-card {
     height: 80px;
     width: 80px;
     margin-bottom: 10px;
-    color: white;
+    /*color: white;*/
   }
 
   .tabs button p {
@@ -517,7 +517,7 @@ a.card-link:hover span.cta-card {
   .bar {
     text-align: center;
     margin-bottom: 30px;
-    color: white;
+    /*color: white;*/
   }
 
 
